force-app/main/default/objects/ARTL_License_Company__mdt/ARTL_License_Company__mdt.object-meta.xml
<CustomObject>
    <label>License Company</label>
    <pluralLabel>License Companies</pluralLabel>
</CustomObject>