force-app/main/default/objects/ARTL_License_Company__mdt/fields/ARLT_License_Compay__c.field-meta.xml
<CustomField>
    <fullName>ARLT_License_Compay__c</fullName>
    <label>License Compay</label>
    <length>30</length>
    <type>Text</type>
</CustomField>