force-app/main/default/objects/ARTL_License_Company__mdt/fields/ARTL_Circle__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Circle__c</fullName>
    <label>Circle</label>
    <length>10</length>
    <type>Text</type>
</CustomField>