force-app/main/default/objects/ARTL_License_Company__mdt/fields/ARTL_Product__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Product__c</fullName>
    <label>Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>