force-app/main/default/objects/ARTL_License_Company__mdt/fields/ARTL_Segment__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Segment__c</fullName>
    <label>Segment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>