force-app/main/default/objects/ARTL_License_Company__mdt/listViews/ARTL_View.listView-meta.xml
<ListView>
    <fullName>ARTL_View</fullName>
    <columns>DeveloperName</columns>
    <columns>ARTL_Product__c</columns>
    <columns>ARTL_Legal_Entity__c</columns>
    <columns>ARTL_Segment__c</columns>
    <columns>ARTL_Circle__c</columns>
    <columns>ARLT_License_Compay__c</columns>
    <filterScope>Everything</filterScope>
    <label>ARTL View</label>
</ListView>